--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -60,9 +61,37 @@ h4 {
     line-height: 19.5px;
 }
 
+button {
+    cursor: pointer;
+    font-family: Inter;
+}
+
+@media only screen and (max-width: 603px) {
+    h1 {
+        font-size: 22px;
+        line-height: 28.6px;
+    }
+
+    .hero-content>p.b1 {
+        font-size: 14px;
+        line-height: 21px;
+    }
+
+    .hero-content>p.b2 {
+        font-size: 14px;
+        line-height: 21px;
+    }
+
+    .b3 {
+        font-size: 11px;
+        line-height: 17px;
+    }
+}
+
 a {
     color: var(--cta-color);
     text-decoration: none;
+    max-height: 24px;
     transition: all var(--transition-duration) var(--transition-timing-function);
 }
 
@@ -81,11 +110,18 @@ header>img {
     height: 40px;
 }
 
+@media only screen and (max-width: 603px) {
+    header>img {
+        margin: 24px auto;
+    }
+}
+
 section {
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+    padding: 0 24px;
 }
 
 section.hero {
@@ -125,7 +161,8 @@ section.hero {
     font-family: Inter;
     font-size: 14px;
     width: 324px;
-    height: 43px;
+    max-width: 100%;
+    height: 45px;
     padding: 0 20px;
     outline: none;
     border: 1px solid var(--border-color);
@@ -171,6 +208,37 @@ section.hero {
     translate: 2px 0;
 }
 
+@media only screen and (max-width: 688px) {
+    section.hero>.hero-content>img {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 603px) {
+
+    .hero-content {
+        padding: 24px 0;
+    }
+
+    section.hero>.hero-content>img {
+        width: 100%;
+        max-height: 206px;
+    }
+
+    .hero-content>.invite-form {
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    .invite-form>input {
+        width: 100%;
+    }
+
+    .invite-form>button {
+        width: 100%;
+    }
+}
+
 .products {
     margin: 32px 0;
 }
@@ -182,8 +250,21 @@ section.hero {
     margin-top: 32px;
 }
 
+@media only screen and (max-width: 603px) {
+
+    .products {
+        margin: 24px 0;
+    }
+
+    .products>.blog-list {
+        margin-top: 16px;
+        gap: 16px;
+    }
+}
+
 .products .card {
     flex: 1;
+    width: 100%;
     min-width: 272px;
     border: 1px solid var(--divider-color);
     border-radius: var(--border-radius);
@@ -234,7 +315,7 @@ section.hero {
     justify-content: center;
     color: var(--cta-color);
     background-color: transparent;
-    padding: 8px 0;
+    padding: 6px 0;
     border: none;
     cursor: pointer;
     transition: color var(--transition-duration) var(--transition-timing-function);
@@ -258,8 +339,13 @@ section.hero {
     translate: 2px 0;
 }
 
-.socials>p {
-    margin: 24px 24px 0 24px;
+.socials {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+    margin: 0 24px;
 }
 
 .social-icons {
@@ -270,6 +356,16 @@ section.hero {
     margin: 0 24px;
 }
 
+@media only screen and (max-width: 603px) {
+    .socials {
+        margin: 0;
+    }
+
+    .social-icons {
+        gap: 40px;
+    }
+}
+
 .social-icons>a>img {
     width: 24px;
     height: 24px;
@@ -277,7 +373,7 @@ section.hero {
 }
 
 .social-icons>a:hover img {
-    transform: scale(1.1);
+    transform: scale(1.08);
 }
 
 footer>.additional-info {
@@ -286,4 +382,10 @@ footer>.additional-info {
     justify-content: center;
     gap: 24px;
     margin: 32px auto;
+}
+
+@media only screen and (max-width: 603px) {
+    footer>.additional-info {
+        margin: 24px auto;
+    }
 }
